--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@swimlane/ngx-datatable": "^16.0.3",
     "cordova-android": "8.1.0",
     "core-js": "^2.5.4",
     "ionicons": "^5.0.0",
