search_player -> resultat dans table avec button details à relier avec cv de Jules

--- a/angular.json
+++ b/angular.json
@@ -98,7 +98,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "styles": [],
+            "styles": [
+              "node_modules/@swimlane/ngx-datatable/release/assets/app.css",
+              "node_modules/@swimlane/ngx-datatable/release/themes/material.css",
+              "node_modules/@swimlane/ngx-datatable/release/assets/icons.css"
+            ],
             "scripts": [],
             "assets": [
               {
