--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/camera": "^5.21.5",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/file": "^5.21.5",
-    "@ionic-native/file-transfer": "^5.21.5",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.1",
+    "@ionic-native/camera": "^5.21.6",
+    "@ionic-native/core": "^5.21.6",
+    "@ionic-native/file": "^5.21.6",
+    "@ionic-native/file-transfer": "^5.21.6",
+    "@ionic-native/splash-screen": "^5.21.6",
+    "@ionic-native/status-bar": "^5.21.6",
+    "@ionic/angular": "^5.0.3",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
     "cordova-plugin-camera": "4.1.0",
@@ -34,7 +34,7 @@
     "cordova-sqlite-storage": "4.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
+    "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -46,7 +46,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/angular-toolkit": "^2.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -63,8 +63,8 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
